--- a/web/src/components/Explore/V2/TopicDirectory/TopicFeedPanel.module.scss
+++ b/web/src/components/Explore/V2/TopicDirectory/TopicFeedPanel.module.scss
@@ -113,6 +113,13 @@
   }
 }
 
+.feedList {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-2);
+  min-width: 0;
+}
+
 .loadingRow {
   display: flex;
   justify-content: center;
